2000-09-25  Frank Warmerdam  <warmerda@cs46980-c>

	* Added DBFGetNativeFieldType() (contributed by Daniel) to dbfopen.c.

2000-07-18  Frank Warmerdam  <warmerda@cs46980-c>

	* added better enforcement of -1 for append in SHPWriteObject().

2000-07-07  Frank Warmerdam  <warmerda@cs46980-c>

	* Added stdlib.h and string.h where needed, and removed lots of 
	unused variables, mainly from example mainlines at the suggestion
	of Bill Hughes. 

2000-05-24  Frank Warmerdam  <warmerda@cs46980-c>

	* Added logic to shpadd to grow vertex lists at the suggestion of 
	Santiago Nullo <sn@softhome.net>.
	
2000-05-23  Frank Warmerdam  <warmerda@cs46980-c>

	* Added checks in dbfopen.c on return result of fseek() and fread().

	* Avoid crashing in DBReadIntegerAttribute() or DBFReadDoubleAttribte()
	if the field or record are out of range.

2000-03-28  Frank Warmerdam  <warmerda@cs46980-c>

	* Release as 1.2.8.

	* Incorporated a -version-info fix and added mkinstalldirs from Jan.

2000-03-17  Frank Warmerdam  <warmerda@cs46980-c>

	* Added shared library hack to Makefile.

	* Fixed up test scripts to look in ./ for executables.

Wed Feb 16 11:20:29 2000  Frank Warmerdam  <warmerda@gdal.velocet.ca>

	* Release 1.2.7.

	* Modified SHPReadObject() so that will return NULL (type 0) shapes
	in a sort of sensible way.

Wed Dec 15 08:49:53 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>

	* Fixed record size written at beginning of records in .shp
	file.  It was 4 bytes to long (thanks to Mikko Syrja of 3D-system Oy)
	
	* Use atof() instead of sscanf() in dbfopen.c, and add stdlib.h.

Mon Dec 13 12:29:01 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>

	* Added support for uppercase .DBF extention c/o 
          Dennis Christopher <dennis@avenza.com>

Fri Nov  5 09:12:31 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>

	* Updated license headers to include the option of use of the code
	  under the LGPL.
	  
1999-09-15 <warmerda@CS46980-B>
